# backtester

./: .env  .gitignore  commands.md  docker-compose.yml
backtester/: pyproject.toml  requirements.txt
backtester/alembic/: env.py
backtester/src/: logging.py  main.py
backtester/src/backtest/: configuration_schema.py  models.py  router.py  schemas.py
backtester/src/core/: celery_worker.py  config.py  entities.py
backtester/src/database/: core.py
